--- a/WebApplication4/WebApplication4/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LoginPartial.cshtml
@@ -20,8 +20,6 @@
                         @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                         {
                             @Html.AntiForgeryToken()
-                            <h4>Use a local account to log in.</h4>
-                                    <hr />
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     <div class="form-group">
                                         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
@@ -45,15 +43,17 @@
                                             </div>
                                         </div>
                                     </div>
+                            
                                     <div class="form-group">
-                                        <div class="col-md-offset-2 col-md-10">
-                                            <input type="submit" value="Log in" class="btn btn-default" />
-                                        </div>
-                                    </div>
 
+                                        <div class="modal-footer">
+                                            <a href="@Url.Action("RegisterClient", "Account")" type="button" class="btn btn-default pull-left"><span class="glyphicon glyphicon-pencil"> </span>No estoy Registrado</a>
+                                            <input type="submit" value="Ingresar" class="btn btn-primary" />
+                                        </div>                                        
+                                    </div>
                         }
                     </section>
-                    <a href="@Url.Action("RegisterClient", "Account")" type="button" class="btn btn-default pull-left"><span class="glyphicon glyphicon-pencil"> </span>No estoy Registrado</a>
+                    @*<a href="@Url.Action("RegisterClient", "Account")" type="button" class="btn btn-default pull-left"><span class="glyphicon glyphicon-pencil"> </span>No estoy Registrado</a>*@
                 </div>
             </div>
         </div>
