--- a/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
@@ -49,9 +49,22 @@
         <div class="form-group">
             @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.tipoDoc)
-                @Html.ValidationMessageFor(model => model.tipoDoc)
+                @{
+                    List<SelectListItem> listItems = new List<SelectListItem>();
+                    listItems.Add(new SelectListItem
+                    {
+                        Text = "DNI",
+                        Value = "1",
+                    });
+                    listItems.Add(new SelectListItem
+                    {
+                        Text = "Pasaporte",
+                        Value = "2"
+                    });
+                }
+                @Html.DropDownListFor(model => model.tipoDoc, listItems, "Seleccione tipo de documento")
             </div>
+
         </div>
 
         <div class="form-group">
