agregue login y la vista del mantener promocion

--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -175,7 +175,7 @@
                     </div>
                     <!--footer de la ventana modal-->
                     <div class="modal-footer">
-                        <a href="@Url.Action("IndexSalesman","Home")" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-user"></span> Ingresar</a>
+                        <a href="@Url.Action("Index2", "Home")" type="button" class="btn btn-primary"><span class="glyphicon glyphicon-user"></span> Ingresar</a>
                     </div>
                 </div>
             </div>
@@ -194,11 +194,12 @@
 
                 <p>Contratos: 666-6666 </p>
                 <p>Creado por <strong>.NETSOFT</strong> Derechos reservados</p>
-                <a id="intranet" href="#logInEmpleado" data-toggle="modal" style="color:white">Intranet</a>
+                <a id="intranet" href="#logInEmpleado" data-toggle="modal">Intranet</a>
 
             </div>
         </div>
     </div>
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
