--- a/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
@@ -33,7 +33,7 @@
             <br>
             <div class="row form-group">
                 <div class="form-inline">
-                    Personalizado
+                    <label>Personalizado</label>
                     @Html.EditorFor(model => model.cantAdq)
                     @Html.ValidationMessageFor(model => model.cantAdq)
                     X
