--- a/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
@@ -71,7 +71,7 @@
                                 <!--Promotor-->
                                 <li class="divider"></li>
                                 <li><a href="mantener_organizador.html">Organizadores</a></li>
-                                <li><a href="mantener_locales.html">Locales</a></li>
+                                <li><a href="@Url.Action("Index", "Local")">Locales</a></li>
                                 <li><a href="@Url.Action("Index", "Evento")">Eventos</a></li>
                             </ul>
                         </li>
