--- a/WebApplication4/WebApplication4/Views/Local/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Index.cshtml
@@ -20,9 +20,9 @@
         <div class="col-md-6">
             <div class="form-group">
                 <a class="btn btn-primary" href="#formNuevo" data-toggle="modal">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
-                <button type="button" class="btn btn-primary" onclick="modificar()">Modificar <span class="glyphicon glyphicon-pencil"></span></button>
+                @*<button type="button" class="btn btn-primary" onclick="modificar()">Modificar <span class="glyphicon glyphicon-pencil"></span></button>
                 <a class="btn btn-primary" href="#eliminar" data-toggle="modal">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>
-                <button id=botonOculto style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2()">Guardar cambios <span class="glyphicon glyphicon-save"></span></button>
+                <button id=botonOculto style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2()">Guardar cambios <span class="glyphicon glyphicon-save"></span></button>*@
             </div>
         </div>
         <div class="col-md-3">
@@ -44,7 +44,7 @@
 
         </div>
         <div class="col-md-1">
-            <a class="btn btn-danger pull-right" href="">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+            <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
         </div>
 
     </div>
@@ -58,12 +58,13 @@
         <table id="mytable" class="table table-bordered table-hover">
             <thead>
                 <tr class="thead">
-                    <th>Codigo</th>
-                    <th>Aforo</th>
+                    <th>Id</th>
                     <th>Descripcion</th>
-                    <th>Codigo Provincia</th>
-                    <th>Codigo Region</th>
                     <th>Ubicacion</th>
+                    <th>Aforo</th>
+                    <th>Provincia</th>
+                    <th>Departamento</th>
+                    <th></th>
                     <th></th>
                 </tr>
             </thead>
@@ -72,12 +73,14 @@
                 {
                     <tr id=@row.codLocal onclick="myFunction(this)">
                         <td>@row.codLocal</td>
-                        <td>@row.aforo</td>
                         <td>@row.descripcion</td>
-                        <td>@row.idProvincia</td>
-                        <td>@row.idRegion</td>
                         <td>@row.ubicacion</td>
-                        <td>@Html.ActionLink("Delete", "Delete", new { id = row.codLocal })</td>
+                        <td>@row.aforo</td>
+                        <td>@db.Region.Find(row.idProvincia).nombre</td>
+                        <td>@db.Region.Find(row.idRegion).nombre</td>
+                        @*<td>@Html.ActionLink("Delete", "Delete", new { id = row.codLocal })</td>*@
+                        <td><a href="@Url.Action("Edit", "Local", new { id = row.codLocal })" class="btn btn-primary">Modificar <span class="glyphicon glyphicon-pencil"></span></a></td>
+                        <td><a href="@Url.Action("Delete", "Local", new { id = row.codLocal })" class="btn btn-primary">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a></td>
                     </tr>
                 }
             </tbody>
@@ -135,18 +138,63 @@
                         </div>
                     </div>
 
+                    <div class="row form-group">
+                        @Html.LabelFor(model => model.departamento, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @{                
+                                List<WebApplication4.Models.Region> listaDepartamento = db.Region.AsNoTracking().Where(c => c.idRegPadre == null).ToList();
+                                IEnumerable<SelectListItem> listItems = (from a in listaDepartamento
+                                                         select new SelectListItem
+                                                       {
+                                                           Value = a.idRegion.ToString(),
+                                                           Text = a.nombre,
+                                                           Selected = false
+                                                       });
+                                listItems.First().Selected = true;                     
+                            }
+                            @Html.DropDownListFor(model => model.departamento, listItems, "Seleccione Departamento")
+                        </div>
+                    </div>
+                    
+                    <div class="row form-group">
+                        @Html.LabelFor(model => model.provincia, new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @{            
+                                List<WebApplication4.Models.Region> listaProvincia = db.Region.AsNoTracking().Where(c => c.idRegPadre != null).ToList();
+                                //List<WebApplication4.Models.Region> listaProvincia = db.Region.AsNoTracking().Where(c => c.idRegPadre == 1).ToList();
+                                //List<WebApplication4.Models.Region> listaProvincia;
+                                //int i=(int)ViewData["Region"];
+                                //if (ViewData["Region"] != null)
+                                //{
+                                //    listaProvincia = db.Region.AsNoTracking().Where(c => c.idRegPadre == i).ToList();
+                                //}
+                                //else
+                                //{
+                                //    listaProvincia = db.Region.AsNoTracking().Where(c => c.idRegPadre != null).ToList();
+                                //}                                
+                                    IEnumerable<SelectListItem> listItems2 = (from a in listaProvincia
+                                                         select new SelectListItem
+                                                       {
+                                                           Value = a.idRegion.ToString(),
+                                                           Text = a.nombre,
+                                                           Selected = false
+                                                       });
+                            }
+                            @Html.DropDownListFor(model => model.provincia, listItems2, "Seleccione Provincia")
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Aceptar" class="btn btn-default" />
+                            <input type="submit" value="Agregar" class="btn btn-primary" />
                         </div>
                     </div>
                 </div>
             }
             <!--footer de la ventana-->
-            <div class="modal-footer">
+            @*<div class="modal-footer">
                 <button type="button" onclick="registrar()" class="btn btn-primary">Agregar <span class="glyphicon glyphicon-ok"></span></button>
-            </div>
+            </div>*@
         </div>
     </div>
 </div>
